--- a/Fundamentals/elementary_notions/amdahls_law.ipynb
+++ b/Fundamentals/elementary_notions/amdahls_law.ipynb
@@ -21,7 +21,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/TeachingUndergradsCHC/modules/blob/master/Fundamentals/elementary_notions/amdahls_law.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/yilianz/ToUCHmodules/blob/master/Fundamentals/elementary_notions/amdahls_law.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -93,9 +93,11 @@
       },
       "source": [
         "# execution time for 2 cores when 10% of the program is serial\n",
-        "0.10 * 100 + (1-0.10)*100/2"
+        "0.10 * 100 + (1-0.10)*100/2\n",
+        "# speed up with 2 cores\n",
+        "S2 = 100/55"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -113,10 +115,9 @@
         "id": "GgFpwIWLZuIq"
       },
       "source": [
-        "# speed up with 2 cores\n",
-        "S2 = 100/55\n",
+        "# Let's Try it\n",
         "\n",
-        "# execution time from 100 cores, when 10% of the program is serial\n",
+        "# execution time from 10 cores, when 10% of the program is serial\n",
         "E100 = 0.10 * 100 + (1-0.10)*100/100\n",
         "\n",
         "# speed up with 100 cores\n",
@@ -215,7 +216,7 @@
         "# infinite cores\n",
         "Ebillion =  0.10 * E1  + (1-0.10)*E1/1000000000.0\n",
         "\n",
-        "Sbillion = E1/Ebillion",
+        "Sbillion = E1/Ebillion\n",
         "print(\"Sbillion=\",Sbillion)\n"
       ],
       "execution_count": null,
